# gameenginecourse2015

./: .gitattributes  .gitignore  .gitmodules  README
asset/: AssetMap.cfg  SkyCube.dae  cube.mtl  suzanne.mtl
asset/model/: SkyCube.dae
asset/model/crytek-sponza/: sponza.dae
asset/texture/: color.dds  lain.dds  normal.dds  tree.dds
asset/texture/sky/: sky9.dds  sky9_filter.dds  sky9_irr.dds  skybox_irr.dds  skybox_rad.dds
cfg/logging/: alldeep.cfg
lib/windows/x86_32/: zlibwapi.lib  zzip.lib
lib/windows/x86_64/: SDL2.lib  SDL2main.lib  soil2.lib  zlibwapi.lib  zzip.lib
packet/: packer.cpp
proj/: CMakeLists.txt  generateSolution.bat
shader/: Bloom.glsl  BrightPass.glsl  BrushTexGenProgram.glsl  CascadedShadowMap.glsl  DeferedDecals.glsl  DeferedGeometry.glsl  DeferedLight.glsl  DeferedSky.glsl  DeferedTerrain.glsl  ErrorShader.txt  FXAA.glsl  GaussianBlur.glsl  LightingFunc.txt  PBR.txt  ParticleRender.glsl  Shadow.glsl  ShadowMapTerrain.glsl  SpriteShader.glsl  TerrainDeform.glsl  TerrainDeformFilter.glsl  TransparentFinal.glsl  TransparentGeometry.glsl  iblprefilter.glsl
src/: .nvimrc  .uncrustify.cfg  .ycm_extra_conf.py  createComponent.sh  createSubsystem.sh
src/core/: CMakeLists.txt  Engine.cpp  Engine.h  Main.cpp
src/core/camera/: Camera.cpp  Camera.h  CameraFirstPerson.cpp  CameraFirstPerson.h
src/core/component/: PositionComponent.cpp  PositionComponent.h
src/core/dataoriented/: BaseCollection.cpp  BaseCollection.h  CollectionHelper.h  Compatability.h  ComponentCollection.cpp  ComponentCollection.h  ComponentIncludes.h  ComponentTypes.h  DenseBackend.cpp  DenseBackend.h  EntityManager.cpp  EntityManager.h  EntityOwner.cpp  EntityOwner.h  EntityTemplateManager.cpp  EntityTemplateManager.h  EntityTypeDefinitions.h  SparseBackend.cpp  SparseBackend.h  World.cpp  World.h  WorldManager.cpp  WorldManager.h
src/core/subsystem/: Subsystem.cpp  Subsystem.h  SubsystemBank.cpp  SubsystemBank.h  SubsystemCollection.cpp  SubsystemCollection.h  SubsystemTypes.h
src/core/subsystem/graphics/: SSEqualizer.cpp  SSEqualizer.h  SSGraphics.cpp  SSGraphics.h  SSGraphicsInitialize.cpp  SSGraphicsInitialize.h  SSGraphicsLoader.cpp  SSGraphicsLoader.h  SSGraphicsSwap.cpp  SSGraphicsSwap.h  SSParticles.cpp  SSParticles.h  SSVisualizer.cpp  SSVisualizer.h  SSWindow.cpp  SSWindow.h
src/core/subsystem/profile/: SSProfilerInOut.cpp  SSProfilerInOut.h
src/core/subsystem/resourcing/: SSResourceManager.cpp  SSResourceManager.h
src/core/subsystem/testing/: SSDeranesPoolTest.cpp  SSDeranesPoolTest.h  SSPoolThreadingTest.cpp  SSPoolThreadingTest.h  SSResourcingTest.cpp  SSResourcingTest.h  SSSimplePoolTest.cpp  SSSimplePoolTest.h  SSStackAllocatorBasicTest.cpp  SSStackAllocatorBasicTest.h  SSStackTest.cpp  SSStackTest.h  SSThreadTest.cpp  SSThreadTest.h  SSToiPoolTest.cpp  SSToiPoolTest.h
src/core/utility/: SDLEventManager.cpp  SDLEventManager.h  SDLEventManagerTypes.h
src/gfx/: BloomProgram.cpp  BloomProgram.h  BlurProgram.cpp  BlurProgram.h  BufferManager.cpp  BufferManager.h  CMakeLists.txt  Camera.cpp  Camera.h  CascadedShadowMap.cpp  CascadedShadowMap.h  DeferedDecalProgram.cpp  DeferedDecalProgram.h  FrameBuffer.cpp  FrameBuffer.h  GBuffer.cpp  GBuffer.h  GFXLibraryDefine.h  GraphicsEngine.cpp  GraphicsEngine.cpp.orig  GraphicsEngine.h  LightEngine.cpp  LightEngine.h  Lights.h  Material.h  MaterialBank.cpp  MaterialBank.h  Model.h  ModelBank.cpp  ModelBank.h  RenderQueue.cpp  RenderQueue.h  Shader.cpp  Shader.h  ShaderBank.cpp  ShaderBank.h  ShaderDefineContainer.cpp  ShaderDefineContainer.h  ShaderProgram.cpp  ShaderProgram.h  (+21 more)
src/memory/: Alloc.h  CMakeLists.txt  DeranesPoolAllocator.cpp  DeranesPoolAllocator.h  DeranesPoolAllocatorWithLock.cpp  DeranesPoolAllocatorWithLock.h  DrinQFrameAllocator.cpp  DrinQFrameAllocator.h  DrinQStackAllocator.cpp  DrinQStackAllocator.h  FrameAllocator.cpp  FrameAllocator.h  IndexBasedPoolAllocator.cpp  IndexBasedPoolAllocator.h  MemoryLibraryDefine.h  SharedPoolAllocator.h  StackAllocator.cpp  StackAllocator.h  ThreadLocalPoolAllocator.h  ToiPoolAllocator.cpp  ToiPoolAllocator.h  ToiStackAllocator.cpp  ToiStackAllocator.h  ToiTemplatedLockablePoolAllocator.h  ToiTemplatedPoolAllocator.h  rString.cpp  rString.h
src/profiler/: AutoGPUProfiler.cpp  AutoGPUProfiler.h  AutoProfiler.cpp  AutoProfiler.h  CMakeLists.txt  FrameCounter.cpp  FrameCounter.h  GPUProfiler.cpp  GPUProfiler.h  ProfileEntry.cpp  ProfileEntry.h  ProfileMacro.h  Profiler.cpp  Profiler.h
src/resourcing/: BigZipFileLoader.cpp  BigZipFileLoader.h  CMakeLists.txt  CustomBigFileLoader.cpp  CustomBigFileLoader.h  FileContent.h  ModelBank.cpp  ModelBank.h  Package.h  PackageManager.cpp  PackageManager.h  Resource.cpp  Resource.h  ResourceLoader.cpp  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h  ResourceTypes.h  ResourcingLibraryDefine.h
src/resourcing/Loader/: DDS.h  DDSLoader.cpp
src/resourcing/loader/: DDSLoader.cpp  DDSLoader.h  ModelLoader.cpp  ModelLoader.h  TextureLoader.cpp  TextureLoader.h
src/resourcing/resource/: Material.h  ModelResource.cpp  ModelResource.h  TextureResource.cpp  TextureResource.h
testresult/: Pool concurrency shared test mutex.txt  Pool concurrency shared test spinlock with yeild.txt  Pool concurrency shared test spinlock without yeild.txt  Pool concurrency shared test.txt  Pool concurrency standard test.txt  Pool concurrency thread local.txt  RandLifeFree.txt  RandLifeMalloc.txt  RandLifePoolAlloc.txt  RandLifePoolDealloc.txt  RandomLifeTime.gp  SimpleAllocPoolIndexBased.txt  SimpleAllocPoolShared.txt  SimpleAllocPoolThreadLocal.txt  SimpleDeallocPoolIndexBased.txt  SimpleDeallocPoolShared.txt  SimpleDeallocPoolThreadLocal.txt  SimpleSTDalloc.txt  SimpleSTDdealloc.txt  plot.p  processdata.sh  stack.gp  stack_data.txt  visualizer_data.txt  visualizer_plot.p
